# glitch

./: .gitignore  .travis.yml  API.md  Gopkg.toml  Makefile  README.md  RtAudio.cpp  RtAudio.h  RtMidi.cpp  RtMidi.h  appveyor.yml  electron-main.js  expr.h  glitch.c  glitch.h  glitch.js  glitchcore.js  glitchcore.js.map  glitchcore.js.mem  index.html  main.cpp  styles.css  sys.h
_src/: glitch_test.c  lutgen.c  main.cpp
android/: .gitignore  build.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: glitch-lib.cpp  glitch.h  math_lut.h  opensles.h
android/app/src/main/java/com/naivesound/glitch/: Glitch.java  MainActivity.java
android/app/src/main/jni/: glitch.c
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
audio/: audio.go  midi.go
cmd/glitch/: app.go  gen.go  loader.go  main.go  ui.go
core/: CMakeLists.txt  glitch.c  glitch.go  glitch.h  glitch_test.c  glitch_test.go  libglitch.h
examples/: das_model.glitch  drums.glitch  get_yucky.glitch  sur_la_planche.glitch
examples/bytebeat/: 42.glitch  arp.glitch  dreamy.glitch  drum.glitch  nervous.glitch  poly.glitch  right.glitch  saw.glitch  sqr.glitch  white.glitch
glitch/: glitch.c  glitch.h
src/: expr.h  functiondiscoverykeys_devpkey.h  glitch.c  glitch.h  glitch_test.c  main.cpp  math_lut.h  tr808.h  wav.h
ui/: app.js  index.html  styles.css
web/: LICENSE  glitch.js  glitchcore-loader.js  glitchcore.js  glitchcore.js.mem  glitchcore.wasm  index.html  package.json  styles.css
